2003-02-13  Bruno Coudoin  <bruno.coudoin@free.fr>

	* .cvsignore: updated
	* Makefile.am:
	* boards/flags/ar.png: added
	* boards/flags/nl.png: replaced by the correct dutch flag
	* configure.in:
	* po/Makefile.in.in:
	* po/ar.po: created by Nabil Ben Khalifa
	* src/gcompris/config.c: added ar
	* src/boards/wordsgame.c : remove the focus to items that falls out 
	                           of the canvas. 
	                           By Andrew Stribblehill <ads@debian.org>
	
2003-02-11  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/*.c : removed the thumb, directly calling process_ok for
	  colors, read_colors,advanced_colors, click_on_letter, missing_letter, image_id
	  and leftright boards.
	  Added a 1 sec timeout to let time to display the entered answer.

2003-02-10  Marius Andreiana <marius galuna.ro>
	* src/gcompris/config.c: romanian and russian locale are no longer combined

2003-02-10  Marius Andreiana <marius galuna.ro>
	* configure.in: added 'ro' to ALL_LINGUAS
	* boards/wordsgame/*.ro : added

2003-02-09  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/read_colors.c : see below
	* src/gcompris/bonus.c : hardened code against multiple quick key press
	* scr/gcompris/*.c & src/boards/*.c : changed all calls from gcompris_play_sound
	  to gcompris_play_ogg, in order to have them work better on my system (KDE).

2003-02-08  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/read_colors.c : fixed a bug when the ENTER key is repeatdly
	  pressed : the board_finished(BOARD_FINISHED_TOOMANYERRORS); got called once
	  per key press, making too many pictures to be displayed. This bug may occur in other
	  boards ...

2003-02-05  Bruno Coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: added po stats (python tool taken from dia)
	* boards/machpuzzle.xml.in: removed until it does something usefull
	* po-checktrans: a nive tool from Cyrille Chepelov to get stats on po files