@@ -1,13 +1,13 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src/gcompris/gcompris.c)
-AM_INIT_AUTOMAKE(gcompris, 2.1)
+AM_INIT_AUTOMAKE(gcompris, 2.2)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
 AC_ISC_POSIX
 
-GNOME_COMPILE_WARNINGS(yes)
+GNOME_COMPILE_WARNINGS
 
 GNOME_PTHREAD_CHECK
 AC_SUBST(PTHREAD_LIB)
@@ -92,10 +92,11 @@ AC_SUBST(plugindir)
 
 dnl Test for gnuchess
 
-AC_PATH_PROG(GNUCHESS, gnuchess,no)
+AC_PATH_PROG(GNUCHESS, gnuchess,no,[/usr/bin:/usr/games:/usr/local/bin])
 if test x$GNUCHESS = xno; then
   AC_MSG_ERROR(Couldn't find gnuchess, please install the gnuchess package version 5 or above)
 fi
+AC_DEFINE_UNQUOTED(GNUCHESS, "$GNUCHESS", Defines where GNU Chess resides on the system)
 
 AC_PATH_PROG(TEXINFO, makeinfo,no)
 if test x$TEXINFO = xno; then
